# tradingview-watchlist-monitor

./: .env.example  README.md  pyproject.toml
.github/workflows/: tradingview-watchlist.yml
launchd/: com.tradingview-watchlist-monitor.plist.example
src/tv_watchlist_discord/: __init__.py  __main__.py  watcher.py
src/tv_watchlist_monitor/: __main__.py  watcher.py
state/: watchlist.json  watchlist_326877343.json
