[project]
name = "tradingview-watchlist-monitor"
version = "0.1.0"
description = "Monitor a public TradingView watchlist and send notifications when symbols are added or removed."
requires-python = ">=3.9"
dependencies = [
  "playwright>=1.44.0"
]

[project.scripts]
tv-watchlist-monitor = "tv_watchlist_monitor.watcher:main"
tv-watchlist-discord = "tv_watchlist_monitor.watcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
